fix(includes): turns out uncommented github stuff does weird things with the api response from github

--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ instagram: specular_art
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-# github: mygithub
-# gitlab: mygitlab
+github: anukiancu
+gitlab: anukiancu
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
